--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.fabric8:tekton-client:6.8.0'
+	implementation 'org.bouncycastle:bcpkix-jdk15on:1.69'
+	implementation 'org.bouncycastle:bcprov-jdk15on:1.69'
+	implementation 'org.bouncycastle:bcprov-ext-jdk15on:1.69'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
