--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+# MongoDB
+spring.data.mongodb.host=131.186.20.125
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=tasks-logs
+spring.data.mongodb.username=jenkins
+spring.data.mongodb.password=jenkins123
+spring.data.mongodb.autoReconnect=true
