--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,11 @@ flow.k8s.url=https://131.186.20.125:6443
 
 flow.mq.queue.triggered=tasks-triggered
 flow.mq.queue.logging=tasks-logging
-flow.mq.route.key.logging=logging
+flow.mq.routing.key.logging=logging
 flow.mq.exchange=flow-tasks
+
+# Used to download postHandler git repo by "post" task of each pipelineRun
+flow.task.post.service.account=git-basic-auth-4-post-task
 
 
 # MongoDB
