refactoring all project - use bean create factory - re-locate all package - test ok

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,3 +24,6 @@ flow.mq.queue.logging=tasks-logging
 flow.mq.routing.key.logging=logging
 flow.mq.routing.key.end=end_dev
 flow.mq.exchange=flow_tasks_results
+
+# PipelineRun config
+pipeline.run.post.task.service.account.name=git-basic-auth-4-post-task
