--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ flow.mq.exchange=flow-tasks
 logging.level.root=WARN
 logging.level.org.springframework.web=INFO
 logging.level.com.solo.tekton.mq.consumer=DEBUG
+
+# PipelineRun config
+pipeline.run.post.task.service.account.name=git-basic-auth-4-post-task
