--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -29,3 +29,6 @@ flow.mq.exchange=flow_tasks_results
 logging.level.root=WARN
 logging.level.org.springframework.web=INFO
 logging.level.com.solo.tekton.mq.consumer=DEBUG
+
+# PipelineRun config
+pipeline.run.post.task.service.account.name=git-basic-auth-4-post-task
