--- a/src/main/resources/tekton-res/pipeline/task-shell.yaml
+++ b/src/main/resources/tekton-res/pipeline/task-shell.yaml
@@ -22,7 +22,7 @@ spec:
   tasks:
     - name: main
       taskRef:
-        name: npm
+        name: shell
       params:
         - name: working-path
           value: $(params.WORKING_PATH)
