Add remote shell task

--- a/src/main/resources/tekton-res/pipeline/task-remote-shell.yaml
+++ b/src/main/resources/tekton-res/pipeline/task-remote-shell.yaml
@@ -18,7 +18,7 @@ spec:
       default: "cHdkO2xz"
     - name: TASK_IMAGE
       description: "container image used by maven task"
-      default: "cytopia/ansible:2.13-tools"
+      default: "cytopia/ansible:2.13-infra"
   tasks:
     - name: main
       taskRef:
