--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.rabbitmq.password = a-ywM2Nss_05Qzy35Iv99z9MIQpGpXir
 flow.mq.queue.triggered=tasks-triggered
 flow.mq.queue.logging=tasks-logging
 flow.mq.routing.key.logging=logging
+flow.mq.routing.key.triggered=triggered
 flow.mq.routing.key.end=end
 flow.mq.exchange=flow-tasks
 
