--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,6 +22,7 @@ spring.rabbitmq.password=root-123456
 flow.mq.queue.triggered=tasks-triggered
 flow.mq.queue.logging=tasks-logging
 flow.mq.routing.key.logging=logging
+flow.mq.routing.key.triggered=triggered
 flow.mq.routing.key.end=end_dev
 flow.mq.exchange=flow_tasks_results
 
