--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,10 +8,14 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  # push:
+  #   branches: [ "main" ]
+  workflow_dispatch:
+    inputs:
+      build-images:
+        description: 'Build docker images or not'
+        required: false
+        default: 'false'
 
 permissions:
   contents: read
@@ -28,6 +32,17 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+        
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
     - uses: actions/cache@v3
       with:
         path: |
@@ -45,3 +60,12 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: build
+
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      if: (github.event.inputs.build-images == 'true') || contains(github.event.action, 'build-images')
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: soloking/tekton-mq-trigger:latest
